--- a/Index/Pages/Project_2/index.html
+++ b/Index/Pages/Project_2/index.html
@@ -13,7 +13,7 @@
     </p>
     <h2>Choices:</h2>
     <a href="Bouwen_voor_Boer_Bert/">My Individual Work</a>   
-    <a href="GitHub Code/BBB/public/">Team Collaboration</a>   
+    <a href="GitHub_Code/BBB/public/">Team Collaboration</a>   
 </body>
 </html>
     
