--- a/Index/index.html
+++ b/Index/index.html
@@ -62,8 +62,8 @@
         <div class="content">
             <h1>About me:</h1>
             <p>
-                I'm currently a dedicated student exploring the world of coding. <br>
-                I derive immense joy from this journey and constantly seek knowledge to enhance my skills further.
+                Im an ICT student in the Netherlands. <br>
+                
             </p>
         </div>
     </div>
@@ -75,7 +75,7 @@
                 <img src="Images/Git-Icon.jpg" alt="GitHub">
                 <p>GitHub</p>
             </a>
-            <a href="mailto:damiankorver@gmail.com">
+            <a target="_blank" href="mailto:damiankorver@gmail.com">
                 <img src="Images/Gmail-Icon.jpg" alt="Mail">
                 <p>Email</p>
             </a>
