--- a/Index/index.html
+++ b/Index/index.html
@@ -46,11 +46,11 @@
         <h2>Connect with Me:</h2> 
         <div class="socials">
             <a target="_blank" href="https://github.com/Damianko135">
-                <img src="images/git-icon.jpg" alt="GitHub Profile">
+                <img src="Images/Git-Icon.jpg" alt="GitHub Profile">
                 <p>GitHub</p>
             </a>
             <a target="_blank" href="mailto:damiankorver@gmail.com">
-                <img src="images/gmail-icon.jpg" alt="Email">
+                <img src="Images/Gmail-Icon.jpg" alt="Email">
                 <p>Email</p>
             </a>
         </div>
