--- a/Index/index.html
+++ b/Index/index.html
@@ -23,7 +23,7 @@
                     <a href="javascript:void(0);" onclick="smoothScrollTo('about')">About</a>
                 </div>
                 <div class="nav-item">
-                    <a href="pages/">Projects</a>
+                    <a href="Pages/Projects.php">Projects</a>
                 </div>
                 <div class="nav-item">
                     <a href="javascript:void(0);" onclick="smoothScrollTo('contact')">Contact</a>
