--- a/Index/index.html
+++ b/Index/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Damian Korver - Personal Portfolio</title>
+    <title>DKorver Portfolio</title>
     <link rel="stylesheet" href="Styling/Index_desktop.css">
     <link rel="stylesheet" href="Styling/Index_mobile.css">    
 </head>
