--- a/Index/Pages/Projects.html
+++ b/Index/Pages/Projects.html
@@ -1,40 +1,35 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Projects</title>
-    <link rel="stylesheet" href="Styling/Projects.css">
-</head>
-<body>
-
+    <link rel="stylesheet" href="Styling/Projects.css" />
+  </head>
+  <body>
     <div class="navbar">
-        <button onclick="window.location.href='../'">Go back</button>
+      <button onclick="window.location.href='../'">Go back</button>
     </div>
     <div class="Nav" id="Nav">
-        <h1>My projects:</h1> 
-        <div class="projects">
-            <a href="Project_1/">
-                <p>Project 1</p>
-                <img src="../Images/Project_1.jpg" alt="Project_1">
-                <div class="hidden">
-                    <br>
-                    <h2>
-                        This is a random link generator.
-                   </h2>
-                </div>
-            </a>
-            <a href="https://groeneweide.dkorver.com/">
-                <img src="../Images/Project_2.jpg" alt="Project_2">
-                <p>Project 2</p>
-                <div class="hidden">
-                    <br>
-                    <h2>
-                        This is a reservation page for a camping.
-                    </h2>
-                </div>
-            </a>
-            <!-- <a href="https://vmware.com">
+      <h1>My projects:</h1>
+      <div class="projects">
+        <a href="Project_1/">
+          <p>Project 1</p>
+          <img src="../Images/Project_1.jpg" alt="Project_1" />
+          <div class="hidden">
+            <br />
+            <h2>This is a random link generator.</h2>
+          </div>
+        </a>
+        <a href="https://groeneweide.dkorver.com/">
+          <img src="../Images/Project_2.jpg" alt="Project_2" />
+          <p>Project 2</p>
+          <div class="hidden">
+            <br />
+            <h2>This is a reservation page for a camping.</h2>
+          </div>
+        </a>
+        <!-- <a href="https://vmware.com">
                 <p>Project 3</p>
 
                 <img src="../Images/Project_1.jpg" alt="Project_1">
@@ -45,7 +40,7 @@
                     </h2>
                 </div>
             </a> -->
-        </div>
+      </div>
     </div>
-</body>
+  </body>
 </html>
